--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,78 +1,39 @@
-CTYPE html>
-
+<!DOCTYPE html>
 <html lang="en">
 
-
-
-	<head>
-
-			<meta charset="utf-8">
-
-				<title>AirBnB Clone</title>
-
-					<style>
-
+<head>
+	<meta charset="utf-8">
+	<title>AirBnB Clone</title>
+	<style>
 		body {
+			margin: 0;
+			padding: 0;
+		}
+		
+		header {
+			background-color: #FF0000;
+			height: 70px;
+			width: 100%;
+		}
 
-						margin: 0;
+		footer {
+			position: absolute;
+			bottom: 0;
+			background-color: #00FF00;
+			height: 60px;
+			width: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+	</style>
+</head>
 
-									padding: 0;
-
-											}
-
-				
-
-				header {
-
-								background-color: #FF0000;
-
-											height: 70px;
-
-														width: 100%;
-
-																}
-
-
-
-						footer {
-
-										position: absolute;
-
-													bottom: 0;
-
-																background-color: #00FF00;
-
-																			height: 60px;
-
-																						width: 100%;
-
-																									display: flex;
-
-																												align-items: center;
-
-																															justify-content: center;
-
-																																	}
-
-							</style>
-
-	</head>
-
-
-
-	<body>
-
-			<header></header>
-
-				<footer>
-
-							<p>Holberton School</p>
-
-								</footer>
-
-	</body>
-
-
+<body>
+	<header></header>
+	<footer>
+		<p>Best School</p>
+	</footer>
+</body>
 
 </html>
-
