--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,56 +1,28 @@
-CTYPE html>
-
+<!DOCTYPE html>
 <html lang="en">
 
+<head>
+	<meta charset="utf-8">
+	<title>AirBnB Clone</title>
 
+	<link rel="icon" type="image/png" href="images/icon.png" />
+	
+	<link rel="stylesheet" type="text/css" href="styles/4-common.css" />
+	<link rel="stylesheet" type="text/css" href="styles/3-header.css" />
+	<link rel="stylesheet" type="text/css" href="styles/4-filters.css" />
+	<link rel="stylesheet" type="text/css" href="styles/3-footer.css" />
+</head>
 
-	<head>
-
-			<meta charset="utf-8">
-
-				<title>AirBnB Clone</title>
-
-
-
-					<link rel="icon" type="image/png" href="images/icon.png" />
-
-						
-
-						<link rel="stylesheet" type="text/css" href="styles/4-common.css" />
-
-							<link rel="stylesheet" type="text/css" href="styles/3-header.css" />
-
-								<link rel="stylesheet" type="text/css" href="styles/4-filters.css" />
-
-									<link rel="stylesheet" type="text/css" href="styles/3-footer.css" />
-
-	</head>
-
-
-
-	<body>
-
-			<header></header>
-
-				<div class="container">
-
-							<section class="filters">
-
-											<button>Search</button>
-
-													</section>
-
-														</div>
-
-															<footer>
-
-																		<p>Holberton School</p>
-
-																			</footer>
-
-	</body>
-
-
+<body>
+	<header></header>
+	<div class="container">
+		<section class="filters">
+			<button>Search</button>
+		</section>
+	</div>
+	<footer>
+		<p>Best School</p>
+	</footer>
+</body>
 
 </html>
-
